# Common-API-Examples

./: README.md
CalculatorApp/: CMakeLists.txt
CalculatorApp/fidl/: Calculator.fidl
CalculatorApp/src/: CalculatorClient.cpp  CalculatorService.cpp  CalculatorStubImpl.cpp  CalculatorStubImpl.hpp
CalculatorApp/src-gen/v1_0/commonapi/: Calculator.hpp  CalculatorDBusDeployment.cpp  CalculatorDBusDeployment.hpp  CalculatorDBusProxy.cpp  CalculatorDBusProxy.hpp  CalculatorDBusStubAdapter.cpp  CalculatorDBusStubAdapter.hpp  CalculatorProxy.hpp  CalculatorProxyBase.hpp  CalculatorStub.hpp  CalculatorStubDefault.cpp  CalculatorStubDefault.hpp
cgen/commonapi-generator/: artifacts.xml
cgen/commonapi_dbus_generator/: artifacts.xml  commonapi-dbus-generator-linux-x86.ini  commonapi-dbus-generator-linux-x86_64.ini  commonapi-dbus-generator-windows-x86.ini  commonapi-dbus-generator-windows-x86_64.ini
dbus-1.8.20/: Doxyfile  Makefile  config.h  config.status  dbus-1-uninstalled.pc  dbus-1.pc  libtool
dbus-1.8.20/bus/: Makefile  dbus-daemon  dbus-daemon-launch-helper
dbus-1.8.20/dbus/: Makefile  dbus-string.h  libdbus-1.la  libdbus-internal.la  libdbus_1_la-sd-daemon.lo  libdbus_internal_la-sd-daemon.lo
dbus-1.8.20/doc/: Makefile  dbus-daemon.1.xml
dbus-1.8.20/test/: Makefile  libdbus-testutils-internal.la  manual-authz  manual-tcp  test-corrupt  test-dbus-daemon  test-dbus-daemon-eavesdrop  test-loopback  test-marshal  test-printf  test-refs  test-relay  test-shell  test-syntax  test-syslog
dbus-1.8.20/tools/: Makefile  dbus-cleanup-sockets  dbus-launch  dbus-monitor  dbus-run-session  dbus-send  dbus-uuidgen
sample-app/: CMakeLists.txt
sample-app/fidl/: HelloWorld.fidl
sample-app/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
sample-app/src-gen/v1_0/commonapi/: HelloWorld.hpp  HelloWorldDBusDeployment.cpp  HelloWorldDBusDeployment.hpp  HelloWorldDBusProxy.cpp  HelloWorldDBusProxy.hpp  HelloWorldDBusStubAdapter.cpp  HelloWorldDBusStubAdapter.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.cpp  HelloWorldStubDefault.hpp
(+218 files in other folders)
